--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 * {
   margin: 0;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  font-size: 14px;
 }
