--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
-* {
+body {
   margin: 0;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
   font-size: 14px;
+}
+
+#root,
+html,
+body {
+  height: 100%;
 }
